# portfolio_analysis

./: README.md  fileparse.py  pcost.py  portfolio.py  pyproject.toml  report.py  ruff.toml  stock.py  tableformat.py  test_stock.py
porty/: __init__.py  portfolio.py
porty/cli/: pcost.py  report.py
